# ndr

./: .gitignore  CHANGELOG.md  Cargo.toml  DEPLOY_DEMO.md  README.md  UI_FEATURE_GAP_ANALYSIS.md  audit.json  audit.txt  audit_report.txt  build_error.txt  build_error_agent.txt  build_error_dashboard.txt  build_error_dashboard_2.txt  check_output.txt  deploy.sh  docker-compose.yml  index.html  package-lock.json  test_api.sh  verify_sensor_registration.sh
Log Management/: .env  INSTALL.md  README.md  README_CLICKHOUSE.md  README_LOCAL_AI.md  requirements.txt  run_all_tests.py
Log1/: README_AI_ASSISTANT.md  docker-compose.yml
assets/: IncidentBoard-CCOf6wgN.js  IncidentBoard-CDCfXsAq.js  IncidentBoard-CzVYeipq.css  IncidentBoard-DLxGn23B.js  IncidentBoard-DXjOa-8j.js  IncidentBoard-otlVQaUu.js  NetworkTopology-BoaxHRnG.css  NetworkTopology-CEyNZ_Lc.js  NetworkTopology-CPdrQ6fS.js  NetworkTopology-DHUPb7GR.js  NetworkTopology-DXfpJIg2.js  NetworkTopology-DnETe_7u.js  NetworkTopology-qIxqmMlj.js  SettingsPanel-BF3quVJt.js  SettingsPanel-BeVmojP0.js  SettingsPanel-CGjW_bm1.js  SettingsPanel-CP5GGUQ9.js  SettingsPanel-DJY5B2PF.js  SettingsPanel-DUF8wIkD.css  SettingsPanel-Od_3-WNz.js  SettingsPanel-_eEHbHVP.css  SettingsPanel-h9acxLvN.js  SettingsPanel-svuF3mZC.js  SettingsPanel-zbhw-FLc.js  UserProfile-1PgSwwAp.js  UserProfile-749R5Ly0.js  UserProfile-B1d6a4hc.js  UserProfile-CQ_hyAzl.css  UserProfile-CatMCALT.css  UserProfile-CgG0WPEc.js  UserProfile-CpUQbb1E.js  UserProfile-EtZE2cQG.js  UserProfile-Gmeb-Qeo.js  UserProfile-MsGIh8iM.js  UserProfile-ix0k_VxD.js  components-advanced-B5lHWut_.css  components-advanced-BDT6rK_q.js  components-advanced-BH1ggVLo.js  components-advanced-B_B5--Nu.js  components-advanced-BiNa7_-l.css  (+145 more)
certs/: server.crt  server.key
deploy/: .env.siem.example  docker-compose.yml  init-db.sql  seed_ai_data.sql  start-demo.sh
docs/: API.md  DEPLOYMENT.md  EDGE_API_AUTHENTICATION.md  EDGE_ARCHITECTURE_DIAGRAMS.md  EDGE_DEPLOYMENT.md  EDGE_DEPLOYMENT_SCENARIOS.md  EDGE_MONITORING.md  ERROR_HANDLING.md  MANAGEMENT_SERVER_INSTALL.md  SENSOR_INSTALL.md  TLS_SETUP.md  USER_GUIDE.md  api-fallback-implementation.md  api-requirements.md  error-handling-verification.md  multi_sensor_deployment.md  testing-guide.md
k8s/: README.md
services/crates/ndr-api/: Cargo.toml
services/crates/ndr-api/src/: error.rs  lib.rs  request.rs  response.rs
services/crates/ndr-api/src/dto/: alert.rs  mod.rs
services/crates/ndr-auth/: Cargo.toml
services/crates/ndr-auth/src/: error.rs  jwt.rs  lib.rs
services/crates/ndr-core/: Cargo.toml
services/crates/ndr-core/src/: circuit_breaker.rs  error.rs  lib.rs
services/crates/ndr-core/src/domain/: alert.rs  asset.rs  detection.rs  event.rs  ids.rs  mod.rs
services/crates/ndr-core/src/ports/: alert_repository.rs  event_store.rs  mod.rs  notification.rs
services/crates/ndr-core/src/services/: correlation.rs  mod.rs  scoring.rs
services/crates/ndr-storage/: Cargo.toml
services/crates/ndr-storage/src/: error.rs  lib.rs
services/crates/ndr-storage/src/opensearch/: event_store.rs  mod.rs
services/crates/ndr-storage/src/postgres/: alert_repository.rs  mod.rs  pool.rs
services/crates/ndr-storage/src/redis/: cache.rs  mod.rs
services/crates/ndr-telemetry/: Cargo.toml
services/crates/ndr-telemetry/src/: lib.rs
services/rust-ai-service/: Cargo.toml  Dockerfile
services/rust-ai-service/src/: main.rs  repository.rs
services/rust-alert-correlator/: Cargo.toml  Dockerfile
services/rust-alert-correlator/src/: cache.rs  db.rs  engine.rs  kafka.rs  main.rs  models.rs
services/rust-asset-service/: Cargo.toml  Dockerfile
services/rust-asset-service/src/: consumer.rs  db.rs  extractor.rs  handlers.rs  main.rs  models.rs
services/rust-auth-service/: Cargo.toml  Dockerfile
services/rust-auth-service/src/: auth.rs  db.rs  handlers.rs  main.rs  models.rs  state.rs
services/rust-chaos-monkey/: Cargo.toml
services/rust-chaos-monkey/src/: main.rs
services/rust-controller/: Cargo.toml  Dockerfile
services/rust-controller/src/: main.rs
services/rust-dashboard-api/: Cargo.toml  Dockerfile
services/rust-dashboard-api/src/: handlers.rs  kafka.rs  main.rs  models.rs  state.rs
services/rust-edge-agent/: Cargo.toml  Dockerfile  README.md  TESTS.md
services/rust-edge-agent/src/: auth.rs  buffer.rs  circuit_breaker.rs  config.rs  detector.rs  error.rs  forwarder.rs  ioc_store.rs  lib.rs  main.rs  tls.rs
services/rust-edge-agent/tests/: buffer_tests.rs  detector_tests.rs  hot_reload_test.rs  ioc_test.rs  rule_engine_test.rs
services/rust-edge-coordinator/: Cargo.toml  Dockerfile  README.md
services/rust-edge-coordinator/src/: auth.rs  error.rs  health_monitor.rs  kafka.rs  main.rs  registration.rs  tls.rs
services/rust-ingestion-gateway/: Cargo.toml  Dockerfile
services/rust-ingestion-gateway/src/: kafka.rs  lib.rs  main.rs  threat_feed.rs
services/rust-ingestion-gateway/tests/: threat_feed_test.rs
services/rust-load-tester/: Cargo.toml
services/rust-load-tester/src/: main.rs
services/rust-parser-normalizer/: Cargo.toml  Dockerfile
services/rust-parser-normalizer/src/: main.rs  normalizer.rs  parser.rs
services/rust-pcap-service/: Cargo.toml  Dockerfile
services/rust-pcap-service/src/: api.rs  capture.rs  main.rs
services/rust-sensor/: Cargo.toml  Dockerfile
services/rust-sensor/src/: anomaly_detector.rs  flow_tracker.rs  main.rs  protocol_parser.rs
services/rust-siem-exporter/: Cargo.toml  Dockerfile
services/rust-siem-exporter/src/: exporters.rs  main.rs
services/rust-soar-orchestrator/: Cargo.toml  Dockerfile
services/rust-soar-orchestrator/src/: actions.rs  engine.rs  lib.rs  main.rs  models.rs
services/rust-soar-orchestrator/tests/: soar_test.rs
services/rust-yara-scanner/: Cargo.toml  Dockerfile
services/rust-yara-scanner/src/: main.rs  scanner.rs  watcher.rs
tests/: e2e_test.py  pcap_soak_test.py  test_correlation.py  test_edge_integration.py  test_encrypted_analysis.py  test_pipeline.py  test_results.json  test_smart_pcap.py  test_smart_pcap_integration.py  (+2 more)
(+443 files in other folders)
