[workspace]
resolver = "2"
members = [
    # Shared crates (foundation)
    "services/crates/ndr-core",
    "services/crates/ndr-telemetry",
    "services/crates/ndr-storage",
    "services/crates/ndr-api",
    "services/crates/ndr-auth",
    
    # Core services
    "services/rust-alert-correlator",
    "services/rust-dashboard-api",
    "services/rust-auth-service",
    "services/rust-asset-service",
    "services/rust-parser-normalizer",
    "services/rust-siem-exporter",
    "services/rust-yara-scanner",
    
    # Specialized services
    "services/rust-ingestion-gateway",
    "services/rust-sensor",
    "services/rust-pcap-service",
    "services/rust-controller",
    "services/rust-ai-service",
    "services/rust-soar-orchestrator",
    "services/rust-edge-agent",
    "services/rust-edge-coordinator",
    "services/rust-load-tester",
    "services/rust-chaos-monkey",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["NDR Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
opentelemetry = "0.21"
opentelemetry_sdk = "0.21"
opentelemetry-otlp = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Redis
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# OpenSearch
opensearch = "2.2"

# HTTP
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Auth
jsonwebtoken = "9.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
