[package]
name = "rust-alert-correlator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-storage = { path = "../crates/ndr-storage" }
ndr-api = { path = "../crates/ndr-api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }

# Already provided by shared crates, but needed directly here
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Environment
dotenv = "0.15"

# Hash (if still needed for correlation)
md-5 = "0.10"
hex = "0.4"
