[package]
name = "rust-alert-correlator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-storage = { path = "../crates/ndr-storage" }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Database & Storage (used directly by service code)
sqlx = { workspace = true }
redis = { workspace = true }

# Time
chrono = { workspace = true }

# UUID  
uuid = { workspace = true }

# Error handling
anyhow = { workspace = true }

# HTTP/Web (for future API)
dotenv = "0.15"

# Kafka
rdkafka = { version = "0.36", features = ["cmake-build"] }


# Hash (if still needed for correlation)
md-5 = "0.10"
hex = "0.4"
