[package]
name = "rust-asset-service"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-storage = { path = "../crates/ndr-storage" }
ndr-api = { path = "../crates/ndr-api" }

# Service-specific dependencies
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
dotenvy = "0.15"
anyhow = "1.0"
