[package]
name = "rust-dashboard-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-storage = { path = "../crates/ndr-storage" }
ndr-api = { path = "../crates/ndr-api" }
ndr-auth = { path = "../crates/ndr-auth" }

# Service-specific dependencies
axum = { version = "0.7", features = ["macros", "ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }
opensearch = "2.0"
reqwest = { version = "0.11", features = ["json"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["serde", "v4"] }
dotenvy = "0.15"
anyhow = "1.0"
jsonwebtoken = "9.2"
