[package]
name = "rust-edge-agent"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_edge_agent"
path = "src/lib.rs"

[[bin]]
name = "rust-edge-agent"
path = "src/main.rs"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }

# Service-specific dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "sqlite", "chrono", "json"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
flate2 = "1.0"
hostname = "0.3"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-retry = "0.3"
evalexpr = "11.0"
