[package]
name = "rust-edge-coordinator"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-storage = { path = "../crates/ndr-storage" }
ndr-api = { path = "../crates/ndr-api" }

# Service-specific dependencies
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
anyhow = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "json", "uuid"] }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
metrics = "0.22"
metrics-exporter-prometheus = "0.13"
sha2 = "0.10"
hex = "0.4"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }
rustls = "0.21"
rustls-pemfile = "1.0"
rdkafka = { version = "0.36", features = ["cmake-build"] }
