[package]
name = "rust-parser-normalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-storage = { path = "../crates/ndr-storage" }

# Service-specific dependencies
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenv = "0.15"
lazy_static = "1.4"
