[package]
name = "rust-sensor"
version = "0.1.0"
edition = "2021"

[dependencies]
pcap = "2.0.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"
rdkafka = { version = "0.36", features = ["cmake-build"] }
uuid = { version = "1.4", features = ["v4"] }
anyhow = "1.0"
