[package]
name = "rust-siem-exporter"
version = "0.1.0"
edition = "2021"

[dependencies]
# Shared NDR crates
ndr-core = { path = "../crates/ndr-core" }
ndr-telemetry = { path = "../crates/ndr-telemetry" }
ndr-api = { path = "../crates/ndr-api" }

# Service-specific dependencies
tokio = { version = "1", features = ["full"] }
rdkafka = { version = "0.36", features = ["cmake-build"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15"
syslog = "6.1"
async-trait = "0.1"
