[package]
name = "ndr-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = "0.22"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["tonic"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
